--- a/Makefile.board
+++ b/Makefile.board
@@ -1,4 +1,4 @@
-PROJ=usb-solder
+# PROJ will be filled in during ./newboard
 
 ZIP=$(PROJ).zip
 
@@ -7,7 +7,7 @@ BOM=$(PROJ)_bom_jlc.csv
 all: $(ZIP) $(BOM)
 
 check:
-	grep '^L ' $(PROJ).sch | awk '{print $2}' | grep -v '^pace:' | sort -u
+	grep '^L ' $(PROJ).sch | awk '{print $$2}' | grep -v '^pace:' | sort -u
 
 GERBS = $(PROJ)-B_Cu.gbr \
 	$(PROJ)-B_Mask.gbr \
