--- a/Makefile.board
+++ b/Makefile.board
@@ -29,6 +29,7 @@ $(ZIP): $(GERBS)
 	ls -l $(ZIP)
 
 PDIR=~/.pyenv/versions/3.7.8/bin
+#GEN=~/JLCKicadTools/jlc_kicad_tools/generate_jlc_files.py
 $(BOM): $(ZIP)
-	$(PDIR)/jlc-kicad-tools .
+	$(PDIR)/jlc-kicad-tools -d $(HOME)/pace-kicad/rotations.csv .
 	ls -l $(BOM)
